# orta-afk

./: .gitignore  CMakeLists.txt  README.md  encoded.txt  main.cpp  main.py
.github/workflows/: update-readme.yml
